--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 
       
   </div><!--fin cv_contenu-->
-  <blockquote id="blockquote1">"Pour ce qui est de l' avenir, il ne s' agit pas de le prévoir, mais de le rendre possible. <br>Antoine de Saint-Exupéry"</blockquote> 
-      <blockquote>Collaborons ensemble !</blockquote>
+  <blockquote id="blockquote1">"Pour ce qui est de l' avenir, il ne s' agit pas de le prévoir, mais de le rendre possible." <br>Antoine de Saint-Exupéry</blockquote> 
+      <blockquote id="blockquote2">Collaborons ensemble !</blockquote>
   
    <!-- A supprimer ou revoir la barre de menu spécialités 
    
